# ai-trace

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  QUICKSTART.md  README.md  README_CN.md  SECURITY.md  docker-compose.yml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
console/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
console/src/: App.tsx  index.css
console/src/layouts/: MainLayout.tsx
console/src/pages/: CertDetail.tsx  Certificates.tsx  Dashboard.tsx  EventDetail.tsx  Events.tsx  Settings.tsx  Verify.tsx
console/src/services/: api.ts
contracts/: .env.example  .gitignore  AITraceArbitration.sol  AITraceRegistry.sol  hardhat.config.js  package.json
contracts/abi/: AITraceArbitration.json  AITraceRegistry.json
contracts/scripts/: deploy.js
contracts/test/: AITraceArbitration.test.js  AITraceRegistry.test.js
deploy/docker/: Dockerfile.console  Dockerfile.server
deploy/k8s/: configmap.yaml  ingress.yaml  minio.yaml  namespace.yaml  postgres.yaml  redis.yaml  secrets.yaml  server.yaml
docs/: API_REFERENCE.md  ARCHITECTURE.md
schema/: event-schema.json
scripts/: deploy.sh  init.sql
sdk/go/: README.md  certs.go  chat.go  client.go  client_test.go  events.go  example_test.go  go.mod  types.go  utils.go
sdk/java/: README.md  pom.xml
sdk/javascript/: README.md  package-lock.json  package.json
sdk/javascript/src/: index.ts  types.ts
sdk/python/: LICENSE  MANIFEST.in  README.md  ai_trace.py  pyproject.toml
sdk/python/src/ai_trace/: __init__.py  client.py  models.py  wrapper.py
sdk/python/tests/: __init__.py  test_client.py
server/: .dockerignore  .env.example  .gitignore  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README_CN.md  SECURITY.md  config.yaml.example  docker-compose.prod.yml  docker-compose.simple.yml  docker-compose.yml  go.mod  go.sum
server/.github/: PULL_REQUEST_TEMPLATE.md
server/.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
server/.github/workflows/: ci.yml  release.yml
server/deploy/: init.sql
server/deploy/federation/: README.md  config-node1.yaml  config-node2.yaml  config-node3.yaml  config-standalone.yaml  docker-compose.multi-node.yml  init-multi-db.sql  prometheus.yml  start-federation.sh
server/docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  QUICKSTART.md  docs.go  swagger.json  swagger.yaml
server/examples/: README.md
server/examples/curl/: basic_workflow.sh
server/examples/go/: main.go
server/examples/python/: basic_usage.py  compliance_audit.py  openai_integration.py
server/internal/anchor/: anchor.go  anchor_test.go  batch.go  batch_test.go  ethereum.go  ethereum_stub.go  federated.go  federated_test.go  manager.go  manager_test.go
server/internal/api/: certs.go  certs_proof.go  certs_report.go  certs_search.go  certs_verify.go  chat.go  decrypt.go  events.go  events_test.go  federated.go  fingerprints.go  health.go  health_test.go  integration_test.go  router.go  router_test.go
server/internal/cache/: cache.go  cache_test.go
server/internal/cert/: auto_strategy.go  evidence_level.go  model.go
server/internal/config/: config.go  config_test.go
server/internal/crypto/: crypto.go  crypto_test.go  keystore.go
server/internal/dag/: dag.go  dag_test.go  validator.go  validator_test.go
server/internal/event/: model.go  model_test.go
server/internal/fingerprint/: audio.go  collector.go  fingerprint.go  fingerprint_test.go  image.go  logprobs.go  ollama.go  perceptual.go  semantic.go  statistical.go  video.go
server/internal/gateway/: circuit_breaker.go  circuit_breaker_test.go  gateway.go  provider.go  provider_test.go  stream.go  stream_test.go
server/internal/integration/: example.go
server/internal/merkle/: incremental.go  incremental_test.go  tree.go  tree_test.go
server/internal/metrics/: metrics.go  metrics_stub.go
server/internal/middleware/: middleware.go  middleware_test.go  trace_headers.go
server/internal/queue/: queue.go  queue_test.go  worker.go
server/internal/report/: report.go
server/internal/store/: decrypt_audit.go  decrypt_audit_test.go  encrypted.go  encrypted_test.go  store.go  (+5 more)
server/scripts/: release.sh
server/sdk/python/: README.md  pyproject.toml
server/sdk/python/ai_trace/: __init__.py  client.py  exceptions.py  models.py
server/sdk/python/ai_trace/integrations/: __init__.py  openai.py
server/sdk/python/tests/: __init__.py  test_client.py
tests/e2e/: e2e_test.go
verifier/: .goreleaser.yml  LICENSE  Makefile  README.md  go.mod
website/: vercel.json
(+45 files in other folders)
