[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-trace"
version = "0.1.0"
description = "Python SDK for AI-Trace - Tamper-proof attestation for AI decisions"
readme = "README.md"
license = "MIT"
authors = [
    { name = "AI-Trace Team", email = "team@ai-trace.dev" }
]
keywords = [
    "ai",
    "audit",
    "attestation",
    "compliance",
    "merkle-tree",
    "blockchain",
    "openai",
    "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security :: Cryptography",
]
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.18.0"]
all = ["openai>=1.0.0", "anthropic>=0.18.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/ai-trace/ai-trace"
Documentation = "https://docs.ai-trace.dev"
Repository = "https://github.com/ai-trace/ai-trace"
Issues = "https://github.com/ai-trace/ai-trace/issues"

[tool.hatch.build.targets.wheel]
packages = ["ai_trace"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=ai_trace --cov-report=term-missing"

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "C4", "SIM"]
ignore = ["ANN101", "ANN102"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
